--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Alkatra&family=Delicious+Handrawn&family=Edu+NSW+ACT+Foundation&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -24,7 +24,7 @@
     <div class="main_div">
     <center>
         <br>
-        <button onclick="start" class="btn btn-warning">START</button>
+        <button onclick="startClassification()" class="btn btn-warning">START</button>
         <h3 id="result_times">Detected - </h3>
         <h3 id="result_voice">Detected Voice Is Of - </h3>
         <br>
@@ -38,6 +38,6 @@
     <div class="copy_right_footer">
         Developed by- SANIDHYA
       </div>
-    <script src="main.js"></script>
+   
 </body>
 </html>
