--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div class="main_div">
     <center>
         <br>
-        <button onclick="startClassification()" class="btn btn-warning">START</button>
-        <h3 id="result_times">Detected - </h3>
+        <button class="btn btn-warning" onclick="startClassification();"> START </button>
         <h3 id="result_voice">Detected Voice Is Of - </h3>
+        <h3 id="result_times"></h3>
         <br>
         <img src="dog.jpg">
         <img src="cat.jpg">
@@ -38,6 +38,6 @@
     <div class="copy_right_footer">
         Developed by- SANIDHYA
       </div>
-   
+      <script src="main.js"></script>
 </body>
 </html>
